# qa_guru_hw18

./: pyproject.toml
tests/: conftest.py  test_login_with_api.py
