[tool.poetry]
name = "qa-guru-hw18"
version = "0.1.0"
description = "hw 18"
authors = ["Irina Luchkova <shtejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.0.2"
requests = "^2.31.0"
selene = "2.0.0rc9"
allure-pytest = "2.13.5"
allure-python-commons = "2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
